@@ -683,8 +683,8 @@ make_mods_section (FILE *out, Elf_Addr current_address,
       grub_util_info ("adding module %s", p->name);
 
       mod_size = grub_util_get_image_size (p->name);
-      header.type = grub_cpu_to_le32 (OBJ_TYPE_ELF);
-      header.size = grub_cpu_to_le32 (mod_size + sizeof (header));
+      header.type = OBJ_TYPE_ELF;
+      header.size = grub_host_to_target32 (mod_size + sizeof (header));
 
       mod_image = grub_util_read_image (p->name);
 
